--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/styled": "^11.3.0",
     "gatsby": "^4.1.3",
+    "gatsby-plugin-emotion": "^7.1.0",
     "gatsby-plugin-gatsby-cloud": "^4.1.1",
     "gatsby-plugin-image": "^2.1.1",
     "gatsby-plugin-manifest": "^4.1.2",
@@ -13,11 +16,13 @@
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.2",
     "gatsby-source-filesystem": "^4.1.1",
+    "gatsby-source-strapi": "^1.0.2",
     "gatsby-transformer-sharp": "^4.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "url-slug": "^3.0.2"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
