--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.3.0",
     "gatsby": "^4.1.3",
     "gatsby-plugin-emotion": "^7.1.0",
